<resources>
    <string name="app_name">Converter</string>
    <string name="title_volume">Volume</string>
    <string name="title_length">Length</string>
    <string name="title_weight">Weight</string>

    <string name="input_copy_button">Copy</string>
    <string name="input_paste_button">Paste</string>
    <string name="output_copy_button">Copy results</string>
    <string name="exchange_button">Exchange values</string>
    <string name="category_spinner">Select a category</string>
    <string name="input_spinner">Choose input unit</string>
    <string name="output_spinner">Choose output unit</string>
    <string name="delete_button">Delete one symbol</string>
    <string name="erase_button">Clear everything</string>
    <string name="spinner_text">Tap to choose unit</string>
    <string name="copy_message">Скопировано!</string>
    <string name="paste_message">Вставлено!</string>
    <string name="category_name">Unit name></string>
    <string name="category_image">Image for unit</string>
    <string name="length_image">Image for length</string>
    <string name="weight_image">Image for weight</string>
    <string name="volume_image">Image for volume</string>
    <string name="back_button">Back button</string>
    <string name="next_button">Forward button</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="erase">AC</string>
    <string name="results_text">Result</string>

    <!--Toasts for Vadim-->
    <!--MainActivity-->
    <string name="back">Позиция курсора уже 0!!! \n Куда дальше ты его хочешь сместить?!</string>
    <string name="forward">Позиция курсора - конец строки!!! \n Куда дальше ты его хочешь сместить?!</string>
    <string name="empty">Тут ничего нет.. Хватить кликать!</string>
    <string name="stop">СТОИТ ОСТАНОВИТЬСЯ!!! \n Значение может быть обрезано</string>
    <string name="nothing">Вообще-то нечего удалять :)</string>
    <string name="point_">МАХ - 50, сейчас 49 \n НУ И КУДА ВСРАЛАСЬ ТЕБЕ ЭТА ТОЧКА!!!</string>
    <string name="point2">Ну и зачем тебе 2-я точка?! \n НЕ НАДА ТАК!!!</string>
    <string name="zero2">Какое-то шаманство с нулями -_-</string>
    <string name="no_select">Я не запрещаю тебе выделять!!!</string>
    <string name="no">НЕ НАДА ТАК.. \n Ну поставь точку по человечески!</string>
    <string name="to_much_toast">Переборщил чутка :)\n MAX: 50</string>
    <string name="to_much_to_paste">Слишком много.. \n Измени значение и попробуй снова :)</string>
    <string name="to_much_points_to_paste">Как-то слишком много \'.\' \n Измени значение и попробуй снова :)</string>
    <string name="to_much_zeros_to_paste">Какое-то шаманство с нулями -_- \n Измени значение и попробуй снова :)</string>
    <string name="no_digits_to_paste">Ты уверен, что это число? \n Измени значение и попробуй снова :)</string>
    <string name="edittext">Это всего лишь поле для вывода результатов.. \n Оно НЕИЗМЕНЯЕМО, не пытайся его изменить :3</string>
    <string name="paste_edittext">Это всего лишь поле для вывода результатов.. \n Оно НЕИЗМЕНЯЕМО, не пытайся сюда что-то вставить :3</string>
    <string name="input_edittext">Если хочешь изменить позицию курсора, то используй спкциальные кнопки \n \"Назад\" и \"Вперед\" (они ниже)</string>
    <string name="input_paste_edittext">Если хочешь вставить текст, то используй специальную кнопку (она правее)</string>
</resources>