<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_length">

    <fragment
        android:id="@+id/navigation_length"
        android:name="rondarchik.calculator.converter.ui.length.LengthFragment"
        android:label="@string/title_length"
        tools:layout="@layout/fragment_length" />

    <fragment
        android:id="@+id/navigation_weight"
        android:name="rondarchik.calculator.converter.ui.weight.WeightFragment"
        android:label="@string/title_weight"
        tools:layout="@layout/fragment_weight" />

    <fragment
        android:id="@+id/navigation_volume"
        android:name="rondarchik.calculator.converter.ui.volume.VolumeFragment"
        android:label="@string/title_volume"
        tools:layout="@layout/fragment_volume" />

</navigation>