<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/KeyboardLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/sevenButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/lato"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />
        <!--android:background="@drawable/button_circle_shape"-->

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/fourButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/oneButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/eightButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/fiveButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/twoButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/zeroButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/nineButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/sixButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/threeButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/pointButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_shape"
            android:fontFamily="@font/lato"
            android:gravity="center|center_horizontal"
            android:text="@string/point"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:backgroundTint="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Button
            android:id="@+id/clearButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_rectangle_shape"
            android:contentDescription="@string/erase_button"
            android:fontFamily="@font/lato_bold"
            android:gravity="center|center_horizontal"
            android:text="@string/erase"
            android:textColor="@color/orange"
            android:textSize="34sp"
            app:backgroundTint="@color/gray_button"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="85dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_circle_rectangle_shape"
            android:contentDescription="@string/delete_button"
            android:gravity="center|center_horizontal"
            android:textSize="40sp"
            app:backgroundTint="@color/gray_button"
            app:icon="@drawable/ic_delete_button"
            app:iconPadding="5dp"
            app:iconTint="@color/orange" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>
</LinearLayout>